--- a/aofei/footer.html
+++ b/aofei/footer.html
@@ -8,12 +8,14 @@
   <body>
     <div
       id="user_wrap"
-      data-key="footData"
+      data-key="onepiece"
+      data-path="/video/commonFooter/"
       data-type="pc"
     />
       <!-- data-tongji="onepiece202402guanwang" -->
 
-    <script src="./footer.js"></script>
+    <!-- <script src="./footer.js"></script> -->
+    <script src="//resource.15166.com/video/commonFooter/footer.js"></script>
     <script>
       window.ZYFooter.init("user_wrap");
     </script>
