--- a/aofei/footer.html
+++ b/aofei/footer.html
@@ -8,7 +8,7 @@
   <body>
     <div
       id="user_wrap"
-      data-key="onepiece"
+      data-key="aofei"
       data-path="/video/commonFooter/"
       data-type="pc"
     />
